# example-juniper-actix-diesel

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
docker/: docker-compose.yaml
migrations/2020-10-17-073721_create_users/: up.sql
src/: app.rs  main.rs
src/domain/: mod.rs
src/domain/model/: user.rs
src/domain/repository/: user_repository.rs
src/graphql/: context.rs
src/graphql/schema/: mutation.rs  query.rs  user.rs
