[package]
name = "example-juniper-actix-diesel"
version = "0.1.0"
authors = ["lanocci <16540010+lanocci@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
juniper = "0.14.2"
diesel= { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.9"
dotenv = "0.15.0"
juniper-from-schema = "0.5.2"
itconfig = { version = "1.0.1", features = ["macro"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
actix = "0.10.0"
actix-web = "3.1.0"
actix-cors = "0.5.0"
actix-files = "0.4.0"
log = "0.4.11"
env_logger = "0.8.1"
serde_derive = "1.0.117"
actix-rt = "1.1.1"
